<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/ingredientSearch"
        android:inputType="text"
        android:hint="@string/ingredientsHint" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation='horizontal'
        android:checkedButton="@+id/categoryCheck"
        android:id="@+id/selectSearchType">

        <RadioButton
            android:text="@string/categoryCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/categoryCheck"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/typeCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/typeCheck"
            android:layout_weight="1" />
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/typeSearch"
        android:hint="@string/typeCatHint" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <Button
        android:background="@color/colorAccent"
        android:text="@string/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchButton" />
</LinearLayout>