<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.75"
        android:clipToPadding="false"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_launcher"
                        android:id="@+id/recipeImage"
                        android:layout_weight="1"
                        android:onClick="onImageClick" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|textCapCharacters"
                        android:ems="10"
                        android:id="@+id/recipeName"
                        android:layout_weight="1"
                        android:hint="@string/recipeNameHint" />

                </LinearLayout>

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/categoryName"
                    android:hint="@string/categoryHint"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/typeName"
                    android:inputType="text"
                    android:hint="@string/typeHint"
                    android:layout_weight="1" />

            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/ingredientsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:gravity="center_horizontal"
                    android:isScrollContainer="false" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/ingredientList"></LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/addIngredienText"
                    android:hint="@string/ingredientHint"
                    android:layout_weight="1" />

                <Button
                    android:backgroundTint="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addIngredient"
                    android:layout_weight="1"
                    android:text="@string/addIngredientButton" />
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/addInstructionsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:gravity="center_horizontal" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/instructionList"></LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/addInstructionText"
                    android:hint="@string/addInstructionHint" />

                <Button
                    android:backgroundTint="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addInstructionButton"
                    android:layout_weight="1"
                    android:text="@string/addInstructionButton" />

            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:backgroundTint="@color/colorAccent"
                android:text="@string/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/saveButton"
                android:layout_weight="0.75" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>