<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.75"
        android:clipToPadding="false"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_launcher"
                        android:id="@+id/recipeImage"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/recipeName"
                        android:layout_weight="0.5"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical|start"/>

                </LinearLayout>

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/categoryTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/categoryTitle"
                        android:gravity="end"
                        android:paddingRight="15dp"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/categoryName"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="start"/>
                </LinearLayout>
                
                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/typeTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/typeTitle"
                        android:gravity="end"
                        android:paddingRight="15dp"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/typeName"
                        android:textSize="20sp"
                        android:layout_weight="0.5"
                        android:gravity="start"/>
                </LinearLayout>

            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/ingredientsListTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:isScrollContainer="false"
                    android:gravity="center_horizontal" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/ingredientList"></LinearLayout>

            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/instructionsListTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:gravity="center_horizontal" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/instructionList"></LinearLayout>


            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:backgroundTint="@color/colorAccent"
                android:text="@string/editButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editButton"
                android:onClick="onEditClick" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>